[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "garnerd"
dynamic = ["version"]
authors = [
  { name="Gary Stump", email="gstumpjr@gmail.com" },
]
description = "Classes and utilities for storing and cataloguing files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "filelock", "python-magic" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {attr = "garnerd.__version__"}
